syntax = "proto3";

package spinnaker.keel.api.engine;

option java_multiple_files = true;
option java_package = "com.netflix.spinnaker.keel.api.engine";

import "Asset.proto";

service Registry {
  rpc registerAssetPlugin(RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
  string name = 1;
  repeated TypeMetadata types = 2;
}

message RegisterResponse {
  bool succeeded = 1;
}
